--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <section class="promo">
             <div class="container">
                 <header class="promo__header header">
-                    <img src="../img/promo-item.png" alt="" class="promo__image">
+                    <img src="img/promo-item.png" alt="" class="promo__image">
                     <svg class="promo__svg" width="22" height="32">
                         <use xlink:href="img/svg/sprite.svg#horse"></use>
                     </svg>
