--- a/index.html
+++ b/index.html
@@ -82,33 +82,48 @@
                     <p class="tournament__help">По всем вопросам обращаться в администрацию к К. Михельсону</p>
                 </section>
 
-                <section class="stages">
-                    <h2 class="stages__title">Этапы преображения Васюков<span>Будущие источники обогащения
-                            васюкинцев</span>
+                <section class="stages slider-container">
+                    <h2 class="stages__title">Этапы преображения Васюков
                     </h2>
+                    <div class="stages__subtitle">Будущие источники обогащения
+                        васюкинцев</div>
                     <img class="stages__image" src="img/stages-planer.png" alt="Картинка с самолётом">
                     <div id="slider2">
-                        <ol class="stages__list">
-                            <li class="stages__item">Строительство железнодорожной магистрали Москва-Васюки</li>
-                            <li class="stages__item">Открытие фешенебельной гостиницы «Проходная пешка» и других
+                        <ol class="stages__list slider-track">
+                            <li class="stages__item slide">Строительство железнодорожной магистрали Москва-Васюки</li>
+                            <li class="stages__item slide">Открытие фешенебельной гостиницы «Проходная пешка» и других
                                 небоскрёбов
                             </li>
-                            <li class="slide stages__item stages__item-third">Поднятие сельского хозяйства в радиусе
+                            <li class="slide stages__item stages__item-third slide">Поднятие сельского хозяйства в радиусе
                                 на тысячу
                                 километров:
                                 производство
                                 овощей, фруктов, икры, шоколадных конфет</li>
-                            <li class="stages__item">Строительство дворца для турнира</li>
-                            <li class="stages__item">Размещение гаражей для гостевого автотранспорта</li>
-                            <li class="stages__item">Постройка сверхмощной радиостанции для передачи всему миру
+                            <li class="stages__item slide">Строительство дворца для турнира</li>
+                            <li class="stages__item slide">Размещение гаражей для гостевого автотранспорта</li>
+                            <li class="stages__item slide">Постройка сверхмощной радиостанции для передачи всему миру
                                 сенсационных
                                 результатов</li>
-                            <li class="stages__item stages__item-seven">Создание аэропорта «Большие Васюки»
+                            <li class="stages__item stages__item-seven slide">Создание аэропорта «Большие Васюки»
                                 с регулярным
                                 отправлением почтовых
                                 самолётов и дирижаблей во все концы света, включая Лос-Анжелос и Мельбурн
                             </li>
                         </ol>
+                        <div class="players__slider-controls slider-controls">
+                            <button class="players__control slider-button prev">
+                                <svg class="players__svg" width="9" height="17">
+                                    <use xlink:href="img/svg/sprite.svg#arrow"></use>
+                                </svg>
+                            </button>
+                            <div class="players__counter slider-counter">1 <span>/ 6</span></div>
+                            <button class="players__control slider-button next">
+                                <svg class="players__svg players__svg--right" width="9" height="17">
+                                    <use xlink:href="img/svg/sprite.svg#arrow"></use>
+                                </svg>
+                            </button>
+                        </div>
+                        <div class="slider-indicators"></div>
                     </div>
                 </section>
                 <section class="players slider-container">
