--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     </h2>
                     <div class="stages__subtitle">Будущие источники обогащения
                         васюкинцев</div>
-                    <img class="stages__image" src="img/stages-planer.png" alt="Картинка с самолётом">
+                    <!-- <img class="stages__image" src="img/stages-planer.png" alt="Картинка с самолётом"> -->
                     <div id="slider2">
                         <ol class="stages__list slider-track">
                             <li class="stages__item slide">Строительство железнодорожной магистрали Москва-Васюки</li>
