update mobile-375px and update slider with touch event mouseup :--------------))

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         <section class="promo">
             <div class="container">
                 <header class="promo__header header">
-                    <img src="img/promo-item.png" alt="" class="promo__image">
                     <svg class="promo__svg" width="22" height="32">
                         <use xlink:href="img/svg/sprite.svg#horse"></use>
                     </svg>
@@ -29,16 +28,20 @@
                     </svg>
                     <div>Клуб четырех коней</div>
                 </header>
-                <h1 class="promo__title">Превратите уездный город</h1>
-                <div class="promo__title desc">в столицу земного шара</div>
-                <p class="promo__description">Оплатите взнос на телеграммы для организации Международного васюкинского
-                    турнира
-                    по шахматам</p>
-                <div class="promo__box">
-                    <button class="promo__button" type="button" id="promo-support">Поддержать шахматную
-                        мысль</button>
-                    <button class="promo__button promo__button-about" type="button" id="promo-about">Подробнее
-                        о турнире</button>
+                <img src="img/promo-item.png" alt="" class="promo__image">
+                <div class="promo__container">
+                    <h1 class="promo__title">Превратите уездный город</h1>
+                    <div class="promo__title desc">в столицу земного шара</div>
+                    <p class="promo__description">Оплатите взнос на телеграммы для организации Международного
+                        васюкинского
+                        турнира
+                        по шахматам</p>
+                    <div class="promo__box">
+                        <button class="promo__button" type="button" id="promo-support">Поддержать шахматную
+                            мысль</button>
+                        <button class="promo__button about" type="button" id="promo-about">Подробнее
+                            о турнире</button>
+                    </div>
                 </div>
             </div>
         </section>
@@ -87,14 +90,15 @@
                     </h2>
                     <div class="stages__subtitle">Будущие источники обогащения
                         васюкинцев</div>
-                    <!-- <img class="stages__image" src="img/stages-planer.png" alt="Картинка с самолётом"> -->
-                    <div id="slider2">
+                    <img class="stages__image" src="img/stages-planer.png" alt="Картинка с самолётом">
+                    <div class="stages__slider" id="slider2">
                         <ol class="stages__list slider-track">
                             <li class="stages__item slide">Строительство железнодорожной магистрали Москва-Васюки</li>
                             <li class="stages__item slide">Открытие фешенебельной гостиницы «Проходная пешка» и других
                                 небоскрёбов
                             </li>
-                            <li class="slide stages__item stages__item-third slide">Поднятие сельского хозяйства в радиусе
+                            <li class="slide stages__item stages__item-third slide">Поднятие сельского хозяйства
+                                в радиусе
                                 на тысячу
                                 километров:
                                 производство
